--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "strip-indent": "^2.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "@babel/core": "^7.2.0",
+    "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-syntax-trailing-function-commas": "^6.22.0",
-    "babel-plugin-transform-async-generator-functions": "^6.24.1",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.5.2",
     "kcd-scripts": "^0.16.3"
   },
   "peerDependencies": {
-    "babel-core": "^6.0.0 || ^7.0.0-alpha || ^7.0.0-beta || ^7.0.0"
+    "@babel/core": "^7.0.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/kcd-scripts/eslint.js",
@@ -56,7 +56,7 @@
   "babel": {
     "presets": [
       [
-        "env",
+        "@babel/preset-env",
         {
           "targets": {
             "node": "4.5"
@@ -68,10 +68,10 @@
       ]
     ],
     "plugins": [
-      "babel-plugin-syntax-trailing-function-commas",
-      "transform-async-to-generator",
-      "transform-async-generator-functions",
-      "transform-object-rest-spread"
+      "syntax-trailing-function-commas",
+      "@babel/plugin-transform-async-to-generator",
+      "@babel/plugin-proposal-async-generator-functions",
+      "@babel/plugin-proposal-object-rest-spread"
     ]
   },
   "repository": {
